--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <style>
         :root {
             --primary-color: #2563eb;
-            --primary-dark: #1d4ed8;
+            --primary-dark: #4A5D23;
             --secondary-color: #64748b;
             --accent-color: #10b981;
             --warning-color: #f59e0b;
             --danger-color: #ef4444;
-            --background: #f8fafc;
+            --background: #9CAF88;
             --card-bg: #ffffff;
-            --text-primary: #0f172a;
-            --text-secondary: #64748b;
-            --border-color: #e2e8f0;
+            --text-primary: #4A5D23;
+            --text-secondary: #000000;
+            --border-color: #6B8E5A;
             --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
         }
 
@@ -559,5 +559,24 @@
             document.getElementById('minCashReserve').value = '10000';
         };
     </script>
+    </script>
+
+    <footer style="
+      background: linear-gradient(90deg, #9CAF88 0%, #6B8E5A 50%, #4A5D23 100%);
+      color:#fff;
+      text-align:center;
+      padding:20px;
+      margin-top:50px;
+      font-size:14px;
+    ">
+      <p>© 2025 DGS Consulting — Streamline Today, Scale Tomorrow</p>
+      <p>
+        <a href="mailto:DGSConsult@consultant.com" style="color:#fff; text-decoration:none; margin:0 8px;">Contact</a> |
+        <a href="https://www.linkedin.com/company/dgs-consutling/" target="_blank" style="color:#fff; text-decoration:none; margin:0 8px;">LinkedIn</a> |
+        <a href="https://www.instagram.com/dgsconsult/" target="_blank" style="color:#fff; text-decoration:none; margin:0 8px;">Instagram</a>
+      </p>
+    </footer>
+</body>
+</html>
 </body>
 </html>
