--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         :root {
             --primary-color: #2563eb;
-            --primary-dark: #4A5D23;
+            --primary-dark: #6B8E5A;
             --secondary-color: #64748b;
             --accent-color: #10b981;
             --warning-color: #f59e0b;
