--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
             --primary-color: #2563eb;
             --primary-dark: #6B8E5A;
             --secondary-color: #64748b;
-            --accent-color: #10b981;
+            --accent-color: #000000;
             --warning-color: #f59e0b;
             --danger-color: #ef4444;
             --background: #9CAF88;
             --card-bg: #ffffff;
-            --text-primary: #4A5D23;
+            --text-primary: #000000;
             --text-secondary: #000000;
             --border-color: #6B8E5A;
             --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
