--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cash Flow Forecaster | DGS Consulting</title>
     <style>
         :root {
-            --primary-color: #2563eb;
+            --primary-color: #000000;
             --primary-dark: #6B8E5A;
             --secondary-color: #64748b;
             --accent-color: #000000;
