--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+  <link rel="icon" type="image/png" href="asset/logo-icon-t.png" />
     <title>Cash Flow Forecaster | DGS Consulting</title>
     <style>
         :root {
